// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonAdapter> removes the title if it is no longer specified 1`] = `
"<a tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--standard hig__button--shrink\\" title=\\"undefined\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\"></span>
</a>"
`;

exports[`<ButtonAdapter> renders the button with an icon 1`] = `
"<a tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--standard hig__button--shrink\\" title=\\"link\\" target=\\"_self\\">
  <span class=\\"hig__button__icon\\"><div class=\\"hig__icon\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" role=\\"img\\" title=\\"settings\\"><title>settings-24</title><path d=\\"M21.94,10.85a1,1,0,0,0-.86-1l-1.74-.24-.47-1.13,1.06-1.4a1,1,0,0,0-.09-1.31L18.21,4.16a1,1,0,0,0-1.31-.08L15.51,5.14l-1.15-.48-.24-1.76a1,1,0,0,0-1-.86H10.84a1,1,0,0,0-1,.87L9.62,4.67,8.5,5.14,7.08,4.06a1,1,0,0,0-1.31.09L4.15,5.78a1,1,0,0,0-.08,1.31l1.07,1.4L4.66,9.63,2.9,9.87a1,1,0,0,0-.87,1v2.29a1,1,0,0,0,.86,1l1.77.24.47,1.11L4.05,16.91a1,1,0,0,0,.09,1.32l1.62,1.61a1,1,0,0,0,1.31.09l1.41-1.07,1.13.47.24,1.77a1,1,0,0,0,1,.86h2.29a1,1,0,0,0,1-.87l.23-1.74,1.14-.48,1.4,1.07a1,1,0,0,0,1.32-.09l1.61-1.62a1,1,0,0,0,.09-1.31l-1.06-1.39.48-1.15,1.75-.24a1,1,0,0,0,.86-1Zm-3.31,2.62-.92,2.2,1.41,1.85-1.61,1.62-1.86-1.42-2.21.92L13.13,21H10.84l-.32-2.33-2.18-.91L6.47,19.13,4.85,17.52l1.43-1.87-.91-2.18L3,13.15V10.86l2.33-.31.92-2.2L4.86,6.48,6.47,4.86,8.35,6.28l2.19-.91L10.84,3h2.29l.32,2.32,2.21.92,1.84-1.41,1.62,1.61L17.72,8.35l.92,2.19,2.31.31v2.29Z\\"></path><path d=\\"M12,8a4,4,0,1,0,4,4A4,4,0,0,0,12,8Zm0,7a3,3,0,1,1,3-3A3,3,0,0,1,12,15Z\\"></path></svg></div></span><!--ICON-->
  <span class=\\"hig__button__title\\">link</span>
</a>"
`;

exports[`<ButtonAdapter> renders the disabled button 1`] = `
"<a href=\\"http://example.com\\" tabindex=\\"-1\\" class=\\"hig__button hig__button--primary hig__button--standard hig__button--shrink hig__button--disabled\\" title=\\"regular button\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">regular button</span>
</a>"
`;

exports[`<ButtonAdapter> renders the flat button 1`] = `
"<a href=\\"http://example.com\\" tabindex=\\"0\\" class=\\"hig__button hig__button--flat hig__button--standard hig__button--shrink\\" title=\\"Flat button\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">Flat button</span>
</a>"
`;

exports[`<ButtonAdapter> renders the large button 1`] = `
"<a href=\\"http://example.com\\" tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--large hig__button--shrink\\" title=\\"Large button\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">Large button</span>
</a>"
`;

exports[`<ButtonAdapter> renders the primary button 1`] = `
"<a href=\\"http://example.com\\" tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--standard hig__button--shrink\\" title=\\"Primary button\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">Primary button</span>
</a>"
`;

exports[`<ButtonAdapter> renders the secondary button 1`] = `
"<a href=\\"http://example.com\\" tabindex=\\"0\\" class=\\"hig__button hig__button--secondary hig__button--standard hig__button--shrink\\" title=\\"Secondary button\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">Secondary button</span>
</a>"
`;

exports[`<ButtonAdapter> renders the small button 1`] = `
"<a href=\\"http://example.com\\" tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--small hig__button--shrink\\" title=\\"small button\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">small button</span>
</a>"
`;

exports[`<ButtonAdapter> renders the standard button 1`] = `
"<a href=\\"http://example.com\\" tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--standard hig__button--shrink\\" title=\\"regular button\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">regular button</span>
</a>"
`;

exports[`<ButtonAdapter> updates the icon using setIcon 1`] = `
"<a tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--standard hig__button--shrink\\" title=\\"link\\" target=\\"_self\\">
  <span class=\\"hig__button__icon\\"><div class=\\"hig__icon\\"><svg width=\\"16\\" height=\\"12\\" viewBox=\\"0 0 16 12\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"hamburger\\"><g transform=\\"translate(-4 -6)\\" fill=\\"#353636\\" fill-rule=\\"evenodd\\"><rect x=\\"4\\" y=\\"6\\" width=\\"16\\" height=\\"2\\"></rect><rect x=\\"4\\" y=\\"11\\" width=\\"16\\" height=\\"2\\"></rect><rect x=\\"4\\" y=\\"16\\" width=\\"16\\" height=\\"2\\"></rect></g></svg></div></span><!--ICON-->
  <span class=\\"hig__button__title\\">link</span>
</a>"
`;

exports[`<ButtonAdapter> updates the link the same as setLink 1`] = `
"<a tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--standard hig__button--shrink\\" title=\\"link\\" target=\\"_self\\" href=\\"http://example.com/2\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">link</span>
</a>"
`;

exports[`<ButtonAdapter> updates the size using setSize 1`] = `
"<a tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--shrink hig__button--large\\" title=\\"some title\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">some title</span>
</a>"
`;

exports[`<ButtonAdapter> updates the title the same as setTitle 1`] = `
"<a tabindex=\\"0\\" class=\\"hig__button hig__button--primary hig__button--standard hig__button--shrink\\" title=\\"correct title\\" target=\\"_self\\">
  <!--ICON-->
  <span class=\\"hig__button__title\\">correct title</span>
</a>"
`;
